<resources>
    <string name="app_name">ToDoApp</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="enter_your_username">Enter your Username</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="welcome_to_justdoit">Welcome to JustDoIt</string>
    <string name="please_login_to_your_account_or_create_new_account_to_continue">Please login to your account or create new account to continue</string>
    <string name="create_account">Create Account</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_apple">Login with Apple</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="register">Register</string>
    <string name="index">Index</string>
    <string name="calender">Calender</string>
    <string name="note">Note</string>
    <string name="what_do_you_want_today">What do you want today?</string>
    <string name="tap_to_add_your_tasks">Tap + to add your tasks</string>
    <string name="add_task">Add Task</string>
    <string name="enter_title">Enter title</string>
    <string name="description">Description</string>
    <string name="choose_time">Choose Time</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="task_priority">Task Priority</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register_with_google">Register with Google</string>
    <string name="register_with_apple">Register with Apple</string>
    <string name="search_for_your_task">Search for your task</string>
    <string name="your_task_s_title">Your task\'s title</string>
    <string name="time_of_your_task">Time of your task</string>
    <string name="category">Category</string>
    <string name="priority">Priority</string>
    <string name="choose_category">Choose Category</string>
    <string name="create_category">Create new category</string>
    <string name="category_name">Category name</string>
    <string name="category_icon">Category icon:</string>
    <string name="category_color">Category color:</string>
    <string name="user">User</string>
    <string name="edit_task_title">Edit Task Title</string>
    <string name="do_match_homework">Do match homework</string>
    <string name="do_chapter_2_to_5_for_next_week">Do chapter 2 to 5 for next week</string>
    <string name="delete_task">Delete Task</string>
    <string name="delete">Delete</string>
    <string name="task_title">Task title:</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_to_want_to_delete_this_task">Are you sure to want to delete this task?</string>
    <string name="choose_priority">Choose Priority</string>
    <string name="tap_to_add_your_note">Tap + to add your Note</string>
    <string name="your_note_s_title">Your note\'s title</string>
    <string name="your_note_s_description">Your note\'s description</string>

    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="email">Email</string>
    <string name="send_mail">Send mail</string>
    <string name="enter_your_email_to_reset_password">Enter your email to reset password</string>
    <string name="log_out">Log out</string>

    <string name="channel_name">notification</string>
    <string name="channel_description">desc</string>
    <string name="calendar">Calendar</string>

</resources>