<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="255dp"
    android:layout_gravity="center"
    android:background="@drawable/dialog_color"
    app:layout_constraintHeight_min="255dp">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_deleteTask"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView23"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/btn_color"
        android:text="@string/delete" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancelDelete"
        tools:ignore="TextContrastCheck"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView23"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="33dp"
        android:layout_toStartOf="@+id/btn_deleteTask"
        android:background="@drawable/btn_colorgrey"
        android:text="@string/cancel"
        android:textColor="#BBDEFB" />

    <View
        android:id="@+id/view_divider2"
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:layout_below="@+id/textView4"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/ic_divider_2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="142dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="142dp"
        android:text="@string/delete_task"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="@string/are_you_sure_to_want_to_delete_this_task"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView22"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/task_title"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>