<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view_all"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color" />

    <View
        android:id="@+id/view_back"
        android:layout_width="11dp"
        android:layout_height="22dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_vector" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="false"
        android:layout_centerInParent="false"
        android:layout_marginStart="37dp"
        android:layout_marginTop="70dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        tools:text="Login" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_login"
        android:layout_alignParentStart="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="50dp"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textSize="18sp"
        tools:text="Username" />

    <EditText
        android:id="@+id/ed_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_username"
        android:layout_alignParentStart="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="37dp"
        android:autofillHints=""
        android:background="@drawable/back_xml"
        android:ems="10"
        android:focusable="auto"
        android:hint="@string/enter_your_username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/white"
        android:textColorHint="#6AF1ECEA" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ed_username"
        android:layout_alignParentStart="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="18sp"
        tools:text="Password" />

    <EditText
        android:id="@+id/ed_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_password"
        android:layout_alignParentStart="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="37dp"
        android:autofillHints=""
        android:background="@drawable/back_xml"
        android:ems="10"
        android:focusable="auto"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/white"
        android:textColorHint="#6AF1ECEA" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ed_password"
        android:layout_gravity="center"
        android:layout_marginStart="37dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="37dp"
        android:background="@drawable/btn_color"
        android:minHeight="48dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="18sp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <View
        android:id="@+id/view_devider"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@id/btn_login"
        android:layout_marginStart="37dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="37dp"
        android:background="@drawable/ic_divider" />

    <Button
        android:id="@+id/btn_login_gg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_devider"
        android:layout_gravity="center"
        android:layout_marginStart="37dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="37dp"
        android:background="@drawable/btn_color"
        android:drawableLeft="@drawable/ic_google"
        android:drawablePadding="-55dp"
        android:paddingLeft="70dp"
        android:gravity="center"
        android:minHeight="48dp"
        android:text="@string/login_with_google"
        android:textAllCaps="false"
        android:textSize="18sp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btn_login_apple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login_gg"
        android:layout_gravity="center"
        android:layout_marginStart="37dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="37dp"
        android:background="@drawable/btn_color"
        android:drawableLeft="@drawable/ic_apple"
        android:drawablePadding="-55dp"
        android:paddingLeft="70dp"
        android:minHeight="48dp"
        android:text="@string/login_with_apple"
        android:textAllCaps="false"
        android:textSize="18sp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login_apple"
        android:layout_alignParentStart="true"
        android:layout_marginStart="115dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:text="@string/don_t_have_account"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login_apple"
        android:layout_marginStart="2dp"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@id/tv_info"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

</RelativeLayout>