<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="270dp"
    android:layout_gravity="center"
    android:background="@drawable/dialog_color"
    app:layout_constraintHeight_min="255dp">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_edit"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/ed_desc"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/btn_color"
        android:text="@string/edit"
        android:textAllCaps="false" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/ed_desc"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="33dp"
        android:layout_toStartOf="@+id/btn_edit"
        android:background="@drawable/btn_colorgrey"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="#8687E7" />

    <View
        android:id="@+id/view_divider2"
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:layout_below="@+id/textView4"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/ic_divider_2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="142dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="142dp"
        android:text="@string/edit_task_title"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/ed_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_divider2"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:background="@color/nav_color"
        android:ems="10"
        android:hint="@string/do_match_homework"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/ed_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ed_title"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:background="@color/nav_color"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/description"
        android:textColor="@color/white"
        android:textSize="16sp" />

</RelativeLayout>