<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/background_color" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginTop="100dp"
        android:text="@string/welcome_to_justdoit"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        tools:text="Welcome to JustDoIt" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/please_login_to_your_account_or_create_new_account_to_continue"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:text="Please login to your account or create new account to continue" />

    <Button
        android:id="@+id/btn_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/create_account"
        android:textSize="20sp"
        android:background="@drawable/btn_color"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_create"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="0dp"
        android:text="@string/login"
        android:textSize="20sp"
        tools:text="Login"
        android:background="@drawable/btn_color"/>

    <View
        android:id="@+id/view_back"
        android:layout_width="11dp"
        android:layout_height="22dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_vector" />

</RelativeLayout>