<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_gravity="center"
    android:background="@drawable/dialog_color"
    app:layout_constraintHeight_min="255dp">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sendmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ed_email1"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginStart="37dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="37dp"
        android:background="@drawable/btn_color"
        android:minHeight="48dp"
        android:text="@string/send_mail"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/ed_email1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="37dp"
        android:autofillHints=""
        android:background="@drawable/back_xml"
        android:ems="10"
        android:focusable="auto"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="@color/white"
        android:textColorHint="#6AF1ECEA" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="213dp"
        android:layout_height="59dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/enter_your_email_to_reset_password"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

</RelativeLayout>