<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/textbox_layout">

    <TextView
        android:id="@+id/tv_choosepriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/choose_time"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/view_divider"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_below="@id/tv_choosepriority"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/ic_divider_2" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_divider"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:amPmTextColor="@color/white"
        android:numbersTextColor="@color/white"
        android:timePickerMode="spinner" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_edit"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="310dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_color"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="310dp"
        android:background="@drawable/btn_color"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textSize="14sp" />


</RelativeLayout>